--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+body {
   font-family: "Nunito Sans", sans-serif;
   background-color: #e7ecef;
 }
